# kuse_cowork

./: DEPLOY_WINDOWS.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: dev-build.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: claude.rs  commands.rs  database.rs  lib.rs  llm_client.rs
src-tauri/src/agent/: agent_loop.rs  message_builder.rs  tool_executor.rs  types.rs
src-tauri/src/mcp/: client.rs  config.rs  mod.rs  stdio_client.rs  storage.rs  types.rs
src-tauri/src/skills/: mod.rs
src-tauri/src/tools/: bash.rs  docker.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  list_allowed_directories.rs  list_dir.rs  mod.rs  path_utils.rs  xlsx_create.rs
src/components/: AgentMain.css  AgentMain.tsx  MCPSettings.css  MCPSettings.tsx  ModelSelector.css  ModelSelector.tsx  Settings.css  Settings.tsx  Sidebar.css  Sidebar.tsx  TaskPanel.css  TaskPanel.tsx  TaskSidebar.css  TaskSidebar.tsx
src/lib/: ai-client.ts  app-version.ts  mcp-api.ts  tauri-api.ts
src/stores/: settings.ts
